# telegram-voice-trigger-bridge

./: .env.example  .gitignore  DEV_PLAN.md  README.md  pyproject.toml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/icjeans/voicebridge/: BackgroundVoiceService.kt  MainActivity.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
src/: main.py
src/telegram_voice_trigger_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/voice_bridge/: __init__.py  telegram_sender.py  trigger.py
tests/: test_main.py  test_trigger.py
