[project]
name = "telegram-voice-trigger-bridge"
version = "0.1.0"
description = "Voice/STT trigger bridge to Telegram"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
